# mingw_support

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  rules.bzl  template.build.bazel.tpl
examples/: BUILD.bazel  example.cpp  hello.cpp
extensions/: BUILD.bazel  toolchain_extension.bzl
toolchains/: toolchain_config.bzl
